# defense-beating-simulator

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.en.md  README.md  README.zh-CN.md  SKILL.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: validate.yml
agents/: openai.yaml
assets/: defense-cheatsheet.template.md  project-summary.template.md  question-bank.template.md  weakness-report.template.md
evals/: README.md  expected_checks.yaml  prompts.csv
examples/campus-energy-system/: expected-output-chat.md  expected-question-bank.md  expected-weakness-report.md  input-project-summary.md
examples/github-skill-review/: expected-output-chat.md  input-readme.md
examples/yolo-pv-defect-detection/: expected-defense-cheatsheet.md  expected-output-chat.md  input-project-summary.md
references/: domain-ai-projects.md  domain-course-design.md  domain-engineering-simulation.md  domain-research-prototype.md  domain-web-showcase.md  project-rubrics.md  question-patterns.md
scripts/: __init__.py  evaluate_response.py  validate_skill.py
tests/: test_skill_package.py
