[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "defense-beating-simulator"
version = "0.3.0"
description = "针对性答辩模拟器：用于项目答辩证据链审查、连续追问、回答评分和材料修复的 portable Agent Skill。"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["agent-skill", "codex", "defense", "interview", "red-team", "student-project"]

[project.scripts]
defense-skill-validate = "scripts.validate_skill:main"

[tool.setuptools]
packages = ["scripts"]

[tool.defense-beating-simulator]
skill_name = "defense-beating-simulator"
display_name = "针对性答辩模拟器"
